RESOLVED FIXED157971
[css-grid] Horizontal scroll must account for grid container's height
https://bugs.webkit.org/show_bug.cgi?id=157971
Summary [css-grid] Horizontal scroll must account for grid container's height
Javier Fernandez
Reported 2016-05-21 00:43:46 PDT
Created attachment 279540 [details] Test case to reproduce the crash. It seems grid layout logic does not consider the scrollbar size when computing the grid container's height. This may result in an incorrect sizing when using indefinite sized containers. Besides, it's possible to make the layout logic to crash due to the fact that contentLogicalHeight can be a negative value if we render a case where content size is 0px.
Attachments
Test case to reproduce the crash. (142 bytes, text/html)
2016-05-21 00:43 PDT, Javier Fernandez
no flags
Patch (4.30 KB, patch)
2016-05-23 05:24 PDT, Javier Fernandez
no flags
Patch (4.46 KB, patch)
2016-05-24 11:00 PDT, Javier Fernandez
no flags
Archive of layout-test-results from webkit-cq-01 for mac-yosemite (966.75 KB, application/zip)
2016-05-24 11:36 PDT, WebKit Commit Bot
no flags
Javier Fernandez
Comment 1 2016-05-23 05:24:20 PDT
Manuel Rego Casasnovas
Comment 2 2016-05-23 06:11:50 PDT
Comment on attachment 279562 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279562&action=review LGTM. > LayoutTests/fast/css-grid-layout/grid-container-scroll-accounts-for-sizing-expected.html:7 > + width: -webkit-fit-content; Nit: Maybe you can use "css-intrinsic-dimensions/resources/width-keyword-classes.css". Or simply something like "position: absolute" or "float: left" to force the shrink-to-fit.
Javier Fernandez
Comment 3 2016-05-24 11:00:32 PDT
WebKit Commit Bot
Comment 4 2016-05-24 11:36:24 PDT
Comment on attachment 279672 [details] Patch Rejecting attachment 279672 [details] from commit-queue. Number of test failures exceeded the failure limit. Full output: http://webkit-queues.webkit.org/results/1375984
WebKit Commit Bot
Comment 5 2016-05-24 11:36:28 PDT
Created attachment 279678 [details] Archive of layout-test-results from webkit-cq-01 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 6 2016-06-06 05:09:57 PDT
Comment on attachment 279672 [details] Patch Clearing flags on attachment: 279672 Committed r201709: <http://trac.webkit.org/changeset/201709>
WebKit Commit Bot
Comment 7 2016-06-06 05:10:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.