[css-grid] Horizontal scroll must account for grid container's height https://bugs.webkit.org/show_bug.cgi?id=157971

Reviewed by Darin Adler.

Source/WebCore:

We don't consider the scrollbar when computing the grid container's
logical height at the beginning of the 'layoutBlock' logic. We must
do it because otherwise, contentLogicalHeight may return a negative
value.

Test: fast/css-grid-layout/grid-container-scroll-accounts-for-sizing.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutBlock):

LayoutTests:

Test to verify we account horizontal scrollbar's size for grid container's
height computation.

* fast/css-grid-layout/grid-container-scroll-accounts-for-sizing-expected.html: Added.
* fast/css-grid-layout/grid-container-scroll-accounts-for-sizing.html: Added.


Canonical link: https://commits.webkit.org/176495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201709 268f45cc-cd09-0410-ab3c-d52691b4dbfc